[package]
name = "rust_socket"
version = "0.1.0"
authors = ["Matt Tomasetti"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.websocket]
git = "https://github.com/websockets-rs/rust-websocket.git"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"